--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       TOUCH_PANNER_DISABLED: false
     };
   </script>
+  
+  <iframe width="100%"
+	height="300px"
+	allowfullscreen
+	frameborder="0"
+	src="//storage.googleapis.com/vrview/index.html?image=//storage.googleapis.com/vrview/examples/coral.jpg&
+	is_stereo=true">
+</iframe>
+  
 
   <script src="build/three.js"></script>
   <script src="build/embed.js"></script>
